--- a/src/index.tailwind.css
+++ b/src/index.tailwind.css
@@ -21,6 +21,8 @@ ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEAL
 
 @tailwind preflight;
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
+
 @tailwind utilities;
 
 @tailwind screens;
